Add Windows installer wizard with WinForms GUI
- Install OpenReach.bat: wrapper that launches PowerShell with bypassed ExecutionPolicy
- installer/setup.ps1: full multi-page wizard with progress bars, component detection,
  automatic Python/Ollama/model installation, desktop shortcut, error handling
- Updated .gitignore for installer temp artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ htmlcov/
 .coverage
 .mypy_cache/
 .ruff_cache/
+
+# Installer temp files
+installer/*.exe
+installer/*.msi
+installer/*.zip
+openreach_install.log
